# agentic-bank

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
chatbot/: config.py  main.py
chatbot/api/: routes.py  schemas.py
chatbot/engine/: claude_client.py  context_builder.py  conversation.py
chatbot/guardrails/: emotion_escalation.py  hallucination_blocker.py  response_validator.py
chatbot/knowledge/: embeddings.py  loader.py  vector_store.py
chatbot/memory/: emotion_store.py  fact_store.py  models.py  session_store.py  thread_store.py  turn_store.py
chatbot/services/: protocols.py
frontend/: index.html
sample-conversations/: 01_jennifer_fraud_dispute_multi_topic.md  02_david_fraud_emergency_card_block.md  03_sarah_lost_wallet_parallel_block.md  04_james_balance_and_mystery_charge.md  05_elena_loan_inquiry_emi.md  06_ahmed_international_transfer.md  07_elena_statements_tax_docs.md  08_thomas_angry_customer_escalation.md  09_robert_mortgage_inquiry.md  10_james_no_cards_edge_case.md  11_priya_faq_deep_dive.md  12_prompt_injection_attempts.md
scenarios/: 01_balance_inquiry_and_recent_transactions.md  02_credit_card_application.md  03_fraud_report_card_block.md  04_personal_loan_inquiry.md  05_international_wire_transfer.md  06_lost_card_replacement.md  07_mortgage_inquiry.md  08_account_statement_tax_docs.md  09_angry_customer_complaint_escalation.md  10_multi_topic_session_with_switching.md
tests/: conftest.py  live_conversation_test.py  test_components.py  test_greeting.py  test_integration.py  test_no_repeat.py
(+22 files in other folders)
