[project]
name = "b2b-chatbot"
version = "0.1.0"
description = "Product-grade B2B chatbot powered by Claude Sonnet 4.6"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.0",
    "openai>=1.68.0",
    "chromadb>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "aiosqlite>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["chatbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
